@@ -4164,6 +4164,7 @@ generate_namelist_decl (gfc_symbol * sym)
 	  nml->sym->attr.referenced = 1;
 	  nml->sym->backend_decl = gfc_get_symbol_decl (nml->sym);
 	}
+      DECL_IGNORED_P (nml->sym->backend_decl) = 0;
       CONSTRUCTOR_APPEND_ELT (nml_decls, NULL_TREE, nml->sym->backend_decl);
     }
 
