@@ -1,3 +1,9 @@
+2013-12-12  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/59440
+	* trans-decl.c (generate_namelist_decl): Ensure debug DIE
+	is created by setting DECL_IGNORED_P to 0.
+
 2013-12-11  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/58916
